--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
 </head>
 <body>
     <h1>this is my first try to learn git</h1>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam sit ipsa dolorem illum assumenda cumque fuga at ducimus eveniet dicta, aperiam optio molestiae inventore! Sit tempore numquam omnis similique possimus.</p>
+
 </body>
+<footer>copyrights are reserved</footer>
 </html>
